crates/ir/tests/ir/snapshots/main__ir__lower__modules__prelude_shadow.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module modules__prelude_shadow

type Option[x10] = MyVariant#0(x10) | MyNone#1
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/traversable/sequence as sequence(o[p[r]]) -> p[o[r]]
import core/io/println as println(g) -> Unit
declare println: (g) -> Unit

fn main() -> Unit =
  let v0: Option[Int] = construct Option::MyVariant#0(42)
  switch v0 {
    0 (v1: Int) ->
      let v2: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
      let v3: Unit = call println(v2, v1)
      v3
    1 ->
      ()
  }
