crates/ir/tests/ir/snapshots/main__ir__lower__modules__prelude_shadow_overload_fold.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module modules__prelude_shadow_overload_fold

import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/traversable/sequence as sequence(o[p[r]]) -> p[o[r]]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import vec_mod/fold as fold(Vec[Int], Int, (Int, Int) -> Int) -> Int
import list_mod/fold as fold(List[Int], Int, (Int, Int) -> Int) -> Int
declare fold: (List[Int], Int, (Int, Int) -> Int) -> Int
declare fold: (Vec[Int], Int, (Int, Int) -> Int) -> Int

fn test_vec(v0: Vec[Int]) -> Int =
  let v4: (Int, Int) -> Int = make_closure(lambda$33, [])
  let v5: Int = call fold(v0, 0, v4)
  v5

fn test_list(v6: List[Int]) -> Int =
  let v10: (Int, Int) -> Int = make_closure(lambda$34, [])
  let v11: Int = call fold(v6, 0, v10)
  v11

fn lambda$33(v1: Int, v2: Int) -> Int =
  let v3: Int = add_int(v1, v2)
  v3

fn lambda$34(v7: Int, v8: Int) -> Int =
  let v9: Int = add_int(v7, v8)
  v9
