crates/ir/tests/ir/snapshots/main__ir__lower__modules__reexport_pub_open.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module modules__reexport_pub_open

extern java "krypton.runtime.KryptonIO" println(x10) -> Unit
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
declare println: (x10) -> Unit

fn main() -> Unit =
  let v0: Color = construct Color::Red#0()
  let v1: Color = v0
  let v2: Unit = call println(v1)
  v2
