crates/ir/tests/ir/snapshots/main__ir__lower__modules__resolved_ref_record_consumer.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module modules__resolved_ref_record_consumer

import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/traversable/sequence as sequence(o[p[r]]) -> p[o[r]]
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/io/println as println(g) -> Unit
import resolved_ref_record_lib/Point as Point(Int, Int) -> Point
declare println: (g) -> Unit

fn mk() -> Point =
  let v0: Point = construct Point(5, 7)
  v0

fn main() -> Unit =
  let v1: Point = call mk()
  let v3: Int = project v1.0
  let v4: Int = project v1.1
  let v5: Int = add_int(v3, v4)
  let v2: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v6: Unit = call println(v2, v5)
  v6
