crates/ir/tests/ir/snapshots/main__ir__lower__modules__resolved_ref_sum_consumer.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module modules__resolved_ref_sum_consumer

import core/peek/peek as peek(d) -> d
import core/list/last as last(List[n3]) -> Option[n3]
import core/list/sort_by as sort_by(List[s5], (s5) -> h5) -> List[s5]
import core/list/filter as filter(List[f1], (f1) -> Bool) -> List[f1]
import core/list/fold as fold(List[s1], t1, (t1, s1) -> t1) -> t1
import core/list/map as map(List[u], (u) -> w) -> List[w]
import core/vec/to_list as to_list(Vec[n10]) -> List[n10]
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/io/println as println(g) -> Unit
import resolved_ref_sum_lib/Keep as Keep(Int) -> Packet
declare println: (g) -> Unit

fn render(v0: Packet) -> Int =
  switch v0 {
    0 (v1: Int) ->
      let v2: Int = add_int(v1, 1)
      v2
    1 ->
      0
  }

fn main() -> Unit =
  let v4: Packet = construct Packet::Keep#0(8)
  let v5: Int = call render(v4)
  let v3: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v6: Unit = call println(v3, v5)
  v6
