crates/ir/tests/ir/snapshots/main__ir__lower__modules__stdlib_import.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module modules__stdlib_import

extern java "krypton.runtime.KryptonIO" println(b12) -> Unit
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[i4]) -> Option[i4]
import core/list/sort_by as sort_by(List[n6], (n6) -> c6) -> List[n6]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[a12]) -> List[a12]
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/list/length as length(List[z]) -> Int
declare length: (List[z]) -> Int
declare println: (b12) -> Unit

fn main() -> Unit =
  let v0: List[Int] = construct List::Nil#1()
  let v1: List[Int] = construct List::Cons#0(3, v0)
  let v2: List[Int] = construct List::Cons#0(2, v1)
  let v3: List[Int] = construct List::Cons#0(1, v2)
  let v4: Int = call length(v3)
  let v5: Unit = call println(v4)
  v5
