crates/ir/tests/ir/snapshots/main__ir__lower__modules__trait_import_with_methods.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module modules__trait_import_with_methods

import core/peek/peek as peek(d) -> d
import core/list/last as last(List[n3]) -> Option[n3]
import core/list/sort_by as sort_by(List[s5], (s5) -> h5) -> List[s5]
import core/list/filter as filter(List[f1], (f1) -> Bool) -> List[f1]
import core/list/fold as fold(List[s1], t1, (t1, s1) -> t1) -> t1
import core/list/map as map(List[u], (u) -> w) -> List[w]
import core/vec/to_list as to_list(Vec[p8]) -> List[p8]
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/io/println as println(g) -> Unit
import trait_selective_lib/MkWidget as MkWidget(String) -> Widget
declare println: (g) -> Unit

fn main() -> Unit =
  let v1: Widget = construct Widget::MkWidget#0("x")
  let v2: Dict[trait_selective_lib.Describable, Widget] = get_dict trait_selective_lib.Describable[Widget]
  let v3: String = trait_call trait_selective_lib.Describable.describe(v2, v1)
  let v0: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v4: Unit = call println(v0, v3)
  v4
